<resources>
    <string name="app_name" translatable="false">Companion</string>

    <string name="title_wallet" translatable="false">Wallet</string>
    <string name="title_evaluation_point" translatable="false">Evaluation points</string>
    <string name="title_courses">Courses</string>
    <string name="title_projects">Projects</string>
    <string name="title_skills">Skills</string>
    <string name="title_error_loading">Failed to load. Check your internet connection</string>
    <string name="title_error_empty_body">Nothing found. Make sure you enter the correct login</string>
    <string name="title_error_other">Something went wrong</string>
    <string name="title_error_authorization">Something went wrong with the authorization</string>
    <string name="title_error_empty_login">Login is empty. Please enter someone\'s login</string>

    <string name="text_log_in">Log in</string>
    <string name="text_search">Search</string>
    <string name="text_level" translatable="false">%1$s%%</string>
    <string name="text_staff" translatable="false">Staff</string>
    <string name="text_try_again">Try again</string>
    <string name="text_ok" translatable="false">OK</string>

    <string name="content_description_logo">Logo icon</string>
    <string name="content_description_user_image">User image</string>
    <string name="content_description_mail">Mail icon</string>
    <string name="content_description_city">City icon</string>
    <string name="content_description_top_skill">Star icon</string>
    <string name="content_description_project_status">Project status icon</string>
    <string name="content_description_error">Sad emoji icon</string>

    <string name="hint_user_login">Enter login</string>
</resources>