<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clError"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_background_element"
    android:elevation="1dp"
    android:visibility="gone"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/ivSadEmoji"
        android:layout_width="@dimen/size_icon_medium"
        android:layout_height="@dimen/size_icon_medium"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description_error"
        android:src="@drawable/ic_sad_emoji_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:gravity="center_horizontal"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSadEmoji"
        tools:text="@string/title_error_loading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text_try_again"
        app:cornerRadius="@dimen/corner_radius_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>