<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundGradient"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/size_icon_logo"
            android:layout_height="@dimen/size_icon_logo"
            android:contentDescription="@string/content_description_logo"
            android:src="@drawable/ic_42_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvUserLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="@dimen/corner_radius_default"
            app:layout_constraintEnd_toEndOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="@id/ivLogo"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:strokeColor="@color/gray_700"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/etUserLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:autofillHints="no"
                android:imeOptions="actionSearch"
                android:backgroundTint="@color/transparent"
                android:hint="@string/hint_user_login"
                android:inputType="text"
                android:maxLength="15"
                android:textAppearance="?textAppearanceHeadline1" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_search"
            app:cornerRadius="@dimen/corner_radius_default"
            app:layout_constraintEnd_toEndOf="@id/cvUserLogin"
            app:layout_constraintStart_toStartOf="@id/cvUserLogin"
            app:layout_constraintTop_toBottomOf="@id/cvUserLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>